# simple-rag

./: .gitignore  app.py  demo_capture.py  go.mod  ingest.py  pyproject.toml  requirements.txt  test_api.py
scrape/cmd/: main.go
